messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app
  labels:
    app: messaging-app
    version: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging-app
      version: green
  template:
    metadata:
      labels:
        app: messaging-app
        version: green
    spec:
      containers:
      - name: messaging-app
        image: messaging-app:green
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app
  labels:
    app: messaging-app
    version: green
spec:
  type: ClusterIP
  selector:
    app: messaging-app
    version: green
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
